--- a/src/posts/migrate-from-next13-to-next15.mdx
+++ b/src/posts/migrate-from-next13-to-next15.mdx
@@ -102,7 +102,7 @@ Next.js 13.5 시기에는 App Router가 베타 단계였기 때문에 많은 개
 
 Pages Router에서 API Route는 `/pages/api/` 디렉토리 내에 파일을 생성하여 구현했습니다
 
-```js title="pages/api/posts.js"
+```js title="pages/api/posts.js" {1-3}
 export default function handler(req, res) {
   if (req.method === 'GET') {
     // 데이터 조회 로직
